adding the hero section to the landing page html

--- a/index.html
+++ b/index.html
@@ -21,5 +21,24 @@
         </nav>
       </header>
     </div>
+    <div class="hero-section">
+      <div class="column1"></div>
+      <h2 class="headings">Hi there, I create websites worth your value.</h2>
+      <p class="description">
+        I create proffessional websites for personal and proffessional brands.
+        boost your online presence by builiding websites that your costumer will
+        enjoy using.
+      </p>
+      <button class="hero-btn btn"></button>
+    </div>
+    <div class="column2">
+      <img src="./assets/Subject.png" />
+      <h4>Ivad Yves HABIMANA</h4>
+      <div class="socila-icons">
+        <img src="./assets/github icon.png" />
+        <img src="./assets/linkedin icon.png" />
+        <img src="./assets/twitter icon.png" />
+      </div>
+    </div>
   </body>
 </html>
