adding the tech section

--- a/index.html
+++ b/index.html
@@ -22,23 +22,43 @@
       </header>
     </div>
     <div class="hero-section">
-      <div class="column1"></div>
-      <h2 class="headings">Hi there, I create websites worth your value.</h2>
-      <p class="description">
-        I create proffessional websites for personal and proffessional brands.
-        boost your online presence by builiding websites that your costumer will
-        enjoy using.
-      </p>
-      <button class="hero-btn btn"></button>
-    </div>
-    <div class="column2">
-      <img src="./assets/Subject.png" />
-      <h4>Ivad Yves HABIMANA</h4>
-      <div class="socila-icons">
-        <img src="./assets/github icon.png" />
-        <img src="./assets/linkedin icon.png" />
-        <img src="./assets/twitter icon.png" />
+      <div class="column1">
+        <h2 class="headings">Hi there, I create websites worth your value.</h2>
+        <p class="description">
+          I create proffessional websites for personal and proffessional brands.
+          boost your online presence by builiding websites that your costumer
+          will enjoy using.
+        </p>
+        <button class="hero-btn btn">Contact</button>
+      </div>
+      <div class="column2">
+        <img src="./assets/Subject.png" />
+        <h4>Ivad Yves HABIMANA</h4>
+        <h3>Web developer</h3>
+        <div class="social-icons">
+          <img src="./assets/github icon.png" />
+          <img src="./assets/linkedin icon.png" />
+          <img src="./assets/twitter icon.png" />
+        </div>
       </div>
     </div>
+    <h3 class="section-head">technologies and expertise</h3>
+    <div class="tech-section">
+      <div class="tech-icons">
+        <img src="./assets/html icon.svg" />
+        <img src="/assets/css icon.svg" />
+        <img src="./assets/JS Icon.svg" />
+      </div>
+      <div class="tech-experience">
+        <h2 class="headings">over 2 years in web development</h2>
+        <p class="description">
+          For the last two years i have been in the field of web development
+          working with different clients and creating websites and products that
+          change peoples lives for the better
+        </p>
+        <button>Download CV</button>
+      </div>
+    </div>
+    <h3 class="section-head">Latest projects</h3>
   </body>
 </html>
