adding project section

--- a/index.html
+++ b/index.html
@@ -60,5 +60,23 @@
       </div>
     </div>
     <h3 class="section-head">Latest projects</h3>
+    <div class="project">
+      <div class="project-image">
+        <img src="./assets/project images/project 1.png" />
+        <h4>Project 1</h4>
+      </div>
+      <div class="project-image">
+        <img src="./assets/project images/project 2.png" />
+        <h4>Project 2</h4>
+      </div>
+      <div class="project-image">
+        <img src="./assets/project images/project 3.png" />
+        <h4>Project 3</h4>
+      </div>
+      <div class="project-image">
+        <img src="./assets/project images/project 4.png" />
+        <h4>Project 4</h4>
+      </div>
+    </div>
   </body>
 </html>
