adding the get in touch section to the landing page html

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           working with different clients and creating websites and products that
           change peoples lives for the better
         </p>
-        <button>Download CV</button>
+        <button class="white-btn btn">Download CV</button>
       </div>
     </div>
     <h3 class="section-head">Latest projects</h3>
@@ -76,6 +76,22 @@
       <div class="project-image">
         <img src="./assets/project images/project 4.png" />
         <h4>Project 4</h4>
+      </div>
+      <button class="white-btn btn">checkout more projects</button>
+    </div>
+    <h3 class="headings">get in touch</h3>
+    <div class="get-in-touch-section">
+      <div class="left-card">
+        <img src="./assets/message icon.png" alt="" />
+        <h4 class="small-headings">contact information</h4>
+      </div>
+      <div class="right-card">
+        <form action="contact">
+          <input type="text" name="name" id="name" placeholder="Full name" />
+          <input type="email" name="email" placeholder="email" />
+          <textarea name="name" id="" placeholder="your message"></textarea>
+          <button type="submit">Submit</button>
+        </form>
       </div>
     </div>
   </body>
