finishing landing page html content

--- a/index.html
+++ b/index.html
@@ -94,5 +94,10 @@
         </form>
       </div>
     </div>
+    <div class="footer">
+      <footer>
+        <h3 class="text-logo">IvadCode</h3>
+      </footer>
+    </div>
   </body>
 </html>
