adding the responsiveness to the nav bar with hamberger icon

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li><button class="nav-btn btn">Contact</button></li>
           </ul>
         </nav>
+        <img class="hamburger-icon" src="./assets/hambeger icon.svg" />
       </header>
     </div>
     <div class="main-content">
