adding hero section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">blog</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">login</a></li>
             <li><button class="nav-btn btn">Contact</button></li>
           </ul>
         </nav>
@@ -27,7 +26,8 @@
       <div class="hero-section">
         <div class="column1">
           <h2 class="headings">
-            Hi there, I create websites worth your value.
+            Hi there,<br />
+            I create websites worth your value.
           </h2>
           <p class="description">
             I create proffessional websites for personal and proffessional
@@ -37,7 +37,7 @@
           <button class="hero-btn btn">Contact</button>
         </div>
         <div class="column2">
-          <img src="./assets/Subject.png" />
+          <img class="subject-image" src="./assets/Subject.png" />
           <h4>Ivad Yves HABIMANA</h4>
           <h3>Web developer</h3>
           <div class="social-icons">
