--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">blog</a></li>
             <li><a href="#">About</a></li>
-            <li><button class="nav-btn btn">Contact</button></li>
+            <li><button class="nav-btn red-btn">Contact</button></li>
           </ul>
         </nav>
         <img class="hamburger-icon" src="./assets/hambeger icon.svg" />
@@ -34,16 +34,20 @@
             brands. boost your online presence by builiding websites that your
             costumer will enjoy using.
           </p>
-          <button class="hero-btn btn">Contact</button>
+          <button class="hero-btn red-btn">Contact</button>
         </div>
         <div class="column2">
-          <img class="subject-image" src="./assets/Subject.png" />
-          <h4>Ivad Yves HABIMANA</h4>
-          <h3>Web developer</h3>
-          <div class="social-icons">
-            <img src="./assets/github icon.png" />
-            <img src="./assets/linkedin icon.png" />
-            <img src="./assets/twitter icon.png" />
+          <div class="subject-image">
+            <img src="./assets/Subject.png" />
+          </div>
+          <div class="sub-image-dec">
+            <h4>Ivad Yves HABIMANA</h4>
+            <h3>Web developer</h3>
+            <div class="social-icons">
+              <img src="./assets/github icon.png" />
+              <img src="./assets/linkedin icon.png" />
+              <img src="./assets/twitter icon.png" />
+            </div>
           </div>
         </div>
       </div>
