adding the technologies used section

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </div>
         </div>
       </div>
-      <h3 class="section-head">technologies and expertise</h3>
+      <h3 class="section-head">Technologies and expertise</h3>
       <div class="tech-section">
         <div class="tech-icons">
           <img src="./assets/html icon.svg" />
@@ -88,7 +88,7 @@
         </div>
         <button class="white-btn btn">checkout more projects</button>
       </div>
-      <h3 class="headings">get in touch</h3>
+      <h3 class="headings">Get in touch</h3>
       <div class="get-in-touch-section">
         <div class="left-card">
           <img src="./assets/message icon.png" alt="" />
