--- a/index.html
+++ b/index.html
@@ -69,26 +69,50 @@
         </div>
       </div>
       <h3 class="section-head">Latest projects</h3>
-      <div class="project">
-        <div class="project-image">
-          <img src="./assets/project images/project 1.png" />
-          <h4>Project 1</h4>
-        </div>
-        <div class="project-image">
-          <img src="./assets/project images/project 2.png" />
-          <h4>Project 2</h4>
-        </div>
-        <div class="project-image">
-          <img src="./assets/project images/project 3.png" />
-          <h4>Project 3</h4>
-        </div>
-        <div class="project-image">
-          <img src="./assets/project images/project 4.png" />
-          <h4>Project 4</h4>
+
+      <div class="project-section">
+        <div class="projects">
+          <div class="project-image">
+            <img src="./assets/project images/project 1.png" />
+            <h4>Project 1</h4>
+            <p class="description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa
+              pulvinar scelerisque scelerisque amet, egestas.
+            </p>
+            <button class="red-btn btn">View project</button>
+          </div>
+          <div class="project-image">
+            <img src="./assets/project images/project 2.png" />
+            <h4>Project 2</h4>
+            <p class="description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa
+              pulvinar scelerisque scelerisque amet, egestas.
+            </p>
+            <button class="red-btn btn">View project</button>
+          </div>
+          <div class="project-image">
+            <img src="./assets/project images/project 3.png" />
+            <h4>Project 3</h4>
+            <p class="description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa
+              pulvinar scelerisque scelerisque amet, egestas.
+            </p>
+            <button class="red-btn btn">View project</button>
+          </div>
+          <div class="project-image">
+            <img src="./assets/project images/project 4.png" />
+            <h4>Project 4</h4>
+            <p class="description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa
+              pulvinar scelerisque scelerisque amet, egestas.
+            </p>
+            <button class="red-btn btn">View project</button>
+          </div>
         </div>
         <button class="white-btn btn">checkout more projects</button>
       </div>
-      <h3 class="headings">Get in touch</h3>
+
+      <h3 class="section-head">Get in touch</h3>
       <div class="get-in-touch-section">
         <div class="left-card">
           <img src="./assets/message icon.png" alt="" />
