adding login form javascript

--- a/login page/login.html
+++ b/login page/login.html
@@ -20,7 +20,7 @@
             <input type="email" id="email" /><br />
             <label>Password</label><br />
             <input type="password" id="password" /><br />
-            <a href="#">forgot password?</a> <br />
+            <a href="#" id="forgotPassword">forgot password?</a> <br />
             <input type="checkbox" name="" id="rememberLogin" /><span
               >remember me</span
             ><br />
@@ -32,5 +32,10 @@
         </div>
       </div>
     </div>
+    <script
+      defer
+      src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"
+    ></script>
+    <script src="../init-firebase.jss"></script>
   </body>
 </html>
