--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         <nav class="nav=-bar">
           <ul class="nav-links">
             <li><a href="#">Home</a></li>
-            <li><a href="#">blog</a></li>
+            <li><a href="#">Blog</a></li>
             <li><a href="#">About</a></li>
+            <li><a href="./login page/login.html">Login</a></li>
             <li><button class="nav-btn red-btn">Contact</button></li>
           </ul>
         </nav>
