--- a/login page/login.html
+++ b/login page/login.html
@@ -26,7 +26,8 @@
             ><br />
             <button type="submit">Login</button><br />
             <p class="sign-up">
-              Don't have an account? <a href="#">Sign up</a>
+              Don't have an account?
+              <a href="../signup-page/signup.html">Sign up</a>
             </p>
           </form>
         </div>
@@ -36,6 +37,7 @@
       defer
       src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"
     ></script>
+    <script src="../main.js"></script>
     <script src="../init-firebase.jss"></script>
   </body>
 </html>
