updating landing page

--- a/index.html
+++ b/index.html
@@ -116,17 +116,13 @@
 
     <h3 class="section-head">Get in touch</h3>
     <div class="get-in-touch-section">
-      <div class="left-card">
-        <img src="./landing page/assets/message icon.png" alt="" />
-        <h4 class="small-headings">contact information</h4>
-      </div>
-      <div class="right-card">
+      <div class="card">
         <form action="contact" id="contactForm">
-          <label> Name</label>
+          <label> Name</label><br>
           <input type="text" name="name" id="name" placeholder="Habimana Yves" /><br />
-          <label>Email</label>
+          <label>Email</label><br>
           <input type="email" name="email" id="email" placeholder="test@test.com" /><br />
-          <label>message</label>
+          <label>message</label><br>
           <textarea name="name" id="message" placeholder="your message"></textarea><br />
           <button type="submit">Submit</button>
         </form>
