working on crud operations

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <nav class="nav=-bar">
         <ul class="nav-links">
           <li><a href="#">Home</a></li>
-          <li><a href="#">blog</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="./login page/login.html">Login</a></li>
           <li><button class="nav-btn red-btn">Contact</button></li>
         </ul>
       </nav>
@@ -117,13 +117,13 @@
     <h3 class="section-head">Get in touch</h3>
     <div class="get-in-touch-section">
       <div class="card">
-        <form action="contact" id="contactForm">
+        <form id="contactForm">
           <label> Name</label><br>
           <input type="text" name="name" id="name" placeholder="Habimana Yves" /><br />
           <label>Email</label><br>
           <input type="email" name="email" id="email" placeholder="test@test.com" /><br />
           <label>message</label><br>
-          <textarea name="name" id="message" placeholder="your message"></textarea><br />
+          <textarea name="name" id="message" placeholder="your message" required></textarea><br />
           <button type="submit">Submit</button>
         </form>
       </div>
