--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
       <div class="card">
         <form id="contactForm">
           <label> Name</label><br>
-          <input type="text" name="name" id="name" placeholder="Habimana Yves" /><br />
+          <input type="text" name="name" id="name" /><br />
           <label>Email</label><br>
-          <input type="email" name="email" id="email" placeholder="test@test.com" /><br />
+          <input type="email" name="email" id="email" /><br />
           <label>message</label><br>
           <textarea name="name" id="message" placeholder="your message" required></textarea><br />
           <button type="submit">Submit</button>
