--- a/login page/login.html
+++ b/login page/login.html
@@ -19,9 +19,9 @@
       <div class="login-form">
         <form id="loginForm">
           <label>Email</label><br />
-          <input type="email" id="email" /><br />
+          <input type="email" id="email" required /><br />
           <label>Password</label><br />
-          <input type="password" id="password" /><br />
+          <input type="password" id="password" required /><br />
           <a href="#" id="forgotPassword">forgot password?</a> <br />
           <input type="checkbox" name="" id="rememberLogin" /><span>remember me</span><br />
           <button type="submit">Login</button><br />
