--- a/signup-page/signup.html
+++ b/signup-page/signup.html
@@ -18,16 +18,19 @@
       <h2>Create a new account</h2>
       <form id="signupForm">
         <label>Name</label><br />
-        <input type="text" id="name" placeholder="your name" /><br />
+        <input type="text" id="name" required /><br />
         <label>Email</label><br />
-        <input type="email" id="email" /><br />
+        <input type="email" id="email" required /><br />
         <label>Password</label><br />
-        <input type="password" id="password" /><br />
+        <input type="password" id="password" required /><br />
         <label>Confirm password</label><br />
-        <input type="password" id="passwordConfirm" /><br />
-        <input type="checkbox" id="agreeTerm" /><br />
-        <p>I accept <a href="#">terms and conditions</a></p>
+        <input type="password" id="passwordConfirm" required /><br />
+        <input type="checkbox" id="agreeTerms" required /><span>I accept <a href="#">terms and conditions</a></span>
         <button type="submit">Sign up</button>
+        <p class="login">
+          Already have an account?
+          <a href="../login page/login.html">Log in</a>
+        </p>
       </form>
     </div>
   </div>
