--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -10,8 +10,9 @@
 </head>
 
 <body>
-    <h1>Welcome to the Dashboard :) !</h1>
+    <h1>Welcome <span id="loggedInUserName">"nameGoesHere"</span> to your Dashboard :) !</h1>
     <h2>contents coming soon</h2>
+    <button> Delete my account</button>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
