updating the readme file

--- a/blog page/blog.html
+++ b/blog page/blog.html
@@ -18,7 +18,7 @@
           <ul class="nav-links">
             <li><a href="#">Home</a></li>
             <li><a href="#">Blog</a></li>
-            <li><button class="nav-btn red-btn">+new article</button></li>
+            <li><a href="./create blog/index.html"></a><button class="nav-btn red-btn">+new article</button></li>
           </ul>
         </nav>
       </header>
@@ -26,29 +26,13 @@
 
     <div class="main">
       <div class="section-part">
-        <h2>Read list</h2>
+        <h2>All articles</h2>
         <div class="read-list-section">
           <div class="read-articles" id="articles-list">
-            <div class="card3">
-              <div class="image-container">
-                <img src="./assets/phone.jpg" class="card-img1">
-                <p class="label">Productivity</p>
-              </div>
-              <div class="article-text card">
-                <h3 class="blog-title">Why you should join Andela now,
-                  my ATLP Journey in 2021</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Commodo ac odio iaculis neque. Porta at praesent
-                  diam vitae consectetur id eu maecenas. Sagittis
-                  nullam quis et sem augue <span class="read-link" id="readMore">Read more</span></p>
-                <p class="read-link">by Ivad</p>
-              </div>
-            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
   </div>
   </div>
   <script src="./blog-script.js"></script>
