refining landing page

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
+  <script src="https://kit.fontawesome.com/29dd4087dd.js" crossorigin="anonymous"></script>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Landing page</title>
+  <title>Ivad code: get your website created now!</title>
   <link rel="stylesheet" href="./landing page/landing-styles.css" />
   <link rel="stylesheet" href="./main.css">
 </head>
@@ -27,13 +28,15 @@
         <li><a href="./index.html">Home</a></li>
         <li><a href="./blog page/blog.html">Blog</a></li>
         <li><a href="./login page/login.html">Login</a></li>
-        <li><button class="nav-btn red-btn">Contact</button></li>
+        <li><a href="./login page/login.html">About</a></li>
+        <li><button class="red-btn nav-btn">Contact</button></li>
       </ul>
     </nav>
   </header>
-  <div class="main-content">
-    <div class="hero-section">
-      <div class="column1">
+
+  <div class="main-section">
+    <section class="hero">
+      <div id="column1">
         <h2 class="headings">
           Hi there,<br />
           I create websites worth your value.
@@ -43,9 +46,10 @@
           brands. boost your online presence by builiding websites that your
           costumer will enjoy using.
         </p>
-        <button class="hero-btn red-btn">Contact</button>
+        <button class="hero-btn red-btn">Contact me</button>
       </div>
-      <div class="column2">
+
+      <div id="column2">
         <div class="subject-image">
           <img src="./landing page/assets/Subject.png" />
         </div>
@@ -59,92 +63,109 @@
           </div>
         </div>
       </div>
-    </div>
-    <h3 class="section-head">Technologies and expertise</h3>
-    <div class="tech-section">
-      <div class="tech-icons">
-        <img src="./landing page/assets/html icon.svg" />
-        <img src="/landing page/assets/css icon.svg" />
-        <img src="./landing page/assets/JS Icon.svg" />
-      </div>
-      <div class="tech-experience">
-        <h2 class="headings">over 2 years in web development</h2>
-        <p class="description">
-          For the last two years i have been in the field of web development
-          working with different clients and creating websites and products
-          that change peoples lives for the better
-        </p>
-        <button class="white-btn btn">Download CV</button>
-      </div>
-    </div>
-    <h3 class="section-head">Latest projects</h3>
+    </section>
 
-    <div class="project-section">
-      <div class="projects">
-        <div class="project-image">
-          <img src="./landing page/assets/project images/project 1.png" />
-          <h4>Project 1</h4>
-          <p class="description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa
-            pulvinar scelerisque scelerisque amet, egestas.
-          </p>
-          <button class="red-btn btn">View project</button>
+    <section>
+      <h3 class="section-head">Technologies and expertise</h3>
+      <div class="tech-section">
+        <div class="tech-icons">
+          <img src="./landing page/assets/html icon.svg" />
+          <img src="/landing page/assets/css icon.svg" />
+          <img src="./landing page/assets/JS Icon.svg" />
         </div>
-        <div class="project-image">
-          <img src="./landing page/assets/project images/project 2.png" />
-          <h4>Project 2</h4>
+        <div class="tech-experience">
+          <h2 class="headings">over 2 years in web development</h2>
           <p class="description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa
-            pulvinar scelerisque scelerisque amet, egestas.
+            For the last two years i have been in the field of web development
+            working with different clients and creating websites and products
+            that change peoples lives for the better
           </p>
-          <button class="red-btn btn">View project</button>
-        </div>
-        <div class="project-image">
-          <img src="./landing page/assets/project images/project 3.png" />
-          <h4>Project 3</h4>
-          <p class="description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa
-            pulvinar scelerisque scelerisque amet, egestas.
-          </p>
-          <button class="red-btn btn">View project</button>
-        </div>
-        <div class="project-image">
-          <img src="./landing page/assets/project images/project 4.png" />
-          <h4>Project 4</h4>
-          <p class="description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa
-            pulvinar scelerisque scelerisque amet, egestas.
-          </p>
-          <button class="red-btn btn">View project</button>
+          <button class="white-btn btn">Download CV</button>
         </div>
       </div>
-      <button class="white-btn btn">checkout more projects</button>
-    </div>
+    </section>
+    <h3 class="section-head">Latest projects</h3>
+    <section>
+      <div class="project-section">
+        <div class="projects">
+          <div class="project-image">
+            <img src="./landing page/assets/project images/project 1.png" />
+            <h4>Project 1</h4>
+            <p class="description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa
+              pulvinar scelerisque scelerisque amet, egestas.
+            </p>
+            <button class="red-btn btn">View project</button>
+          </div>
+          <div class="project-image">
+            <img src="./landing page/assets/project images/project 2.png" />
+            <h4>Project 2</h4>
+            <p class="description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa
+              pulvinar scelerisque scelerisque amet, egestas.
+            </p>
+            <button class="red-btn btn">View project</button>
+          </div>
+          <div class="project-image">
+            <img src="./landing page/assets/project images/project 3.png" />
+            <h4>Project 3</h4>
+            <p class="description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa
+              pulvinar scelerisque scelerisque amet, egestas.
+            </p>
+            <button class="red-btn btn">View project</button>
+          </div>
+
+          <div class="project-image">
+            <img src="./landing page/assets/project images/project 4.png" />
+            <h4>Project 4</h4>
+            <p class="description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa
+              pulvinar scelerisque scelerisque amet, egestas.
+            </p>
+            <button class="red-btn btn">View project</button>
+          </div>
+        </div>
+        <button class="white-btn btn">checkout more projects</button>
+      </div>
+    </section>
+
 
     <h3 class="section-head">Get in touch</h3>
-    <div class="get-in-touch-section">
-      <div class="card">
+    <div id="form">
+      <div id="form-card1">
+        <img src="./landing page/assets/message icon.png" alt="">
+        <h4> Contact information</h4>
+        <p><i class="fas fa-envelope"></i> Email: yvesyvad@gmail.com</p>
+        <p><i class="fas fa-phone-alt"></i> Tel: +250788362739</p>
+        <p><i class="fas fa-map-marker-alt"></i> Location: Kigali KG 312 st</p>
+      </div>
+      <div id="form-card2">
+        <h4> Send me a message</h4>
         <form id="contactForm">
           <label> Name</label><br>
           <input type="text" name="name" id="name" /><br />
           <label>Email</label><br>
           <input type="email" name="email" id="email" /><br />
-          <label>message</label><br>
-          <textarea name="name" id="message" placeholder="your message" required></textarea><br />
-          <button type="submit">Submit</button>
+          <label>Message</label><br>
+          <textarea name="name" id="message"></textarea><br />
+          <button type="submit" class="white-btn">Submit</button>
         </form>
       </div>
     </div>
-    <div class="footer">
-      <footer>
-        <h3 class="text-logo">IvadCode</h3>
-      </footer>
-    </div>
   </div>
-  <script defer src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script defer src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-  <script defer src="./init-firebase.js"></script>
-  <script defer src="./main.js"></script>
+  <footer>
+    <h3 class="text-logo"><img src="./landing page/assets/Ivad Code logo.svg" alt="logo"></h3>
+    <p>&copy; IvadCode 2022</p>
+    <div class="icons">
+      <p><i class="fab fa-facebook fa-1x"></i></p>
+      <p><i class="fab fa-twitter fa-1x"></i></p>
+      <p><i class="fab fa-linkedin fa-1x"></i></p>
+    </div>
+
+  </footer>
+
+  <script defer src=" ./main.js"></script>
   <script defer src="./landing page/landing-script.js"></script>
   <script defer src="./main.js"></script>
 </body>
