adding sweet alert 2

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <script src="https://kit.fontawesome.com/29dd4087dd.js" crossorigin="anonymous"></script>
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ivad code: get your website created now!</title>
@@ -166,8 +167,9 @@
   </footer>
 
   <script defer src=" ./main.js"></script>
-  <script defer src="./landing page/landing-script.js"></script>
-  <script defer src="./main.js"></script>
+  <script defer src="./landing page/landing-script.js" type="module"></script>
+  <script defer src="./main.js" type="module"></script>
+
 </body>
 
 </html>
